# Computer_Graphics_Task2

./: .gitignore  CMakeLists.txt  README  ShaderProgram.cpp  ShaderProgram.h  main.cpp  mesh.h  model.h
resources/objects/asteroid/: A2.mtl
resources/objects/asteroid2/: asteroid2.mtl
resources/objects/asteroid2/model/: rock_by_dommk.mtl
resources/objects/cube/: cube.mtl
shaders/: explosion_fragment.glsl  fragment.glsl  plasm_ball_fragment.glsl  skybox_vertex.glsl  vertex.glsl
